# Continuity_Failure

./: .gitignore  AGENTS.md  README.md  conftest.py
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  observability.py  repository.py
backend/app/ai/: __init__.py  fallbacks.py  logging.py  provider.py  runner.py  schemas.py
backend/app/api/: campaigns.py
backend/app/schemas/: api.py
backend/app/services/: campaign_service.py  errors.py
docs/: architecture.md  branch-review.md  codebase-review.md  comprehensive-engineering-ux-review-2026-07-09.md  content-authoring.md  fable5-review-prompt.md  game-loop.md  major-enhancement-roadmap.md  medium-improvement-batch-prompts.md  mvp-roadmap.md  player-experience-plan.md  project-spec.md  state-schema.md  wave-2-implementation-plan.md  wave-3-implementation-plan.md
engine/: __init__.py  calls.py  conditions.py  consequences.py  degradation.py  diffs.py  dossier.py  endings.py  experience.py  factions.py  ledger.py  models.py  rules.py  seed_data.py  state.py  threads.py  turn.py
evals/: README.md
frontend/: .gitignore  TESTING.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.tsbuildinfo  tsconfig.test.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
memory/: __init__.py  persistence.py
prompts/: README.md  memo_drafter.v1.md
tests/: test_advice_memos.py  test_advice_relevance.py  test_ai_boundary.py  test_ai_memo.py  test_ai_runner.py  test_api.py  test_call_variants.py  test_consequence_report.py  (+21 more)
(+122 files in other folders)
